--- a/main.tex
+++ b/main.tex
@@ -2,10 +2,15 @@
 %\usepackage{minitoc}
 
 % do not toch the following files
+\input{./sty/imports}
 \input{./sty/structure}
-\input{sty/defs.tex}
-\input{sty/math_notations.tex}
-\input{sty/styling}
+\input{./sty/defs.tex}
+\input{./sty/math_notations.tex}
+\input{./sty/styling}
+
+%%%%%%%%%%%%%%%%%%% YOU CUSTOM PACKAGES AND DEFINITIONS %%%%%%%%%%%%%%%%%%%%
+
+%%%%%%%%%%%%%%%%%%% YOU CUSTOM PACKAGES AND DEFINITIONS %%%%%%%%%%%%%%%%%%%%
 
 
 
@@ -46,8 +51,6 @@
 % EDITOR: Define Keyworks
 % ---------------------------------------------------------
 \def\keyword{experiments, testbeds, energy-neutral devices}
-
-
 
 
 % do not touch:
